<resources>
    <string name="app_name">ND940C3-Project</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_channel_name">udacity</string>
    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>

    <string name="radio_option_1">Glide - Image Loading Library by BumpTech</string>
    <string name="radio_option_2">LoadApp - Current Repository by Udacity</string>
    <string name="radio_option_3">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>
    <string name="no_radio_option_selected_message">Please select a file to download</string>
    <string name="download_success_string">SUCCESS</string>
    <string name="download_failed_string">FAILED</string>
    <string name="filename_string_label">File name:</string>
    <string name="status_label_string">Status:</string>
</resources>
